--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,9 @@ venv.bak/
 api_license/env_api_license/
 api_vector_database/env_api_vector_database/
 
+# experimental code:
+api_license/app/main-experimental.py
+api_license/app/main-provisional.py
 
 # Spyder project settings
 .spyderproject
