--- a/api_license/Dockerfile
+++ b/api_license/Dockerfile
@@ -23,7 +23,7 @@ COPY . .
 
 # Descargar el modelo de HuggingFace durante la construcción del contenedor  
 RUN python -c "from transformers import pipeline; classifier = pipeline('zero-shot-classification', model='facebook/bart-large-mnli')"  
-
+## COMMENT AV: You can also download the model in the run.sh script or in the server startup script, so the container is smaller to reduce the loading/downloading times from/to the container repo. 
 # Ensure the run.sh script is executable  
 RUN chmod +x run.sh  
   
